# camforce

./: .gitignore  Dockerfile  LICENSE  README.md  camforce.py  config.yaml.dist  docker-compose.yml  pyproject.toml
src/: auth.py  cli.py  config.py  creds.py  debug.py  models.py  protocol.py  renderer.py  rtsp_client.py  runner.py  streams.py
vendors/: README.md
vendors/axis/: credentials.txt  paths.txt
vendors/bosch/: paths.txt
vendors/dahua/: credentials.txt  paths.txt
vendors/dlink/: paths.txt
vendors/foscam/: credentials.txt  paths.txt
vendors/generic/: paths.txt
vendors/geovision/: paths.txt
vendors/hikvision/: credentials.txt  paths.txt
vendors/honeywell/: paths.txt
vendors/panasonic/: paths.txt
vendors/pelco/: paths.txt
vendors/reolink/: credentials.txt  paths.txt
vendors/samsung/: paths.txt
vendors/sony/: paths.txt
vendors/trendnet/: paths.txt
vendors/ubiquiti/: credentials.txt  paths.txt
vendors/vivotek/: paths.txt
