[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "camforce"
version = "0.1.0"
description = "Parallel RTSP probe with multi-vendor Digest auth quirks and well-known credentials testing."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "jr-k", email = "jrk@jierka.com" }]
requires-python = ">=3.9"
dependencies = [
    "rich>=13",
    "pyyaml>=6",
]

[project.scripts]
camforce = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
